<resources>
    <string name="app_name">嗨！私聊</string>
    <string name="phone_hint">phoneNumber</string>
    <string name="password_hint">password</string>
    <string name="login">LOGIN</string>
    <string name="regist">regist</string>
    <string name="chat">chat</string>
    <string name="contact">contact</string>
    <string name="personal">personal</string>
    <string name="add_friends">添加联系人</string>
    <string name="nickname">nickName</string>
    <string name="input_phone">请输入好友的手机号</string>
    <string name="add">添加</string>
    <string name="personal_info">个人信息</string>
    <string name="login_out">退出登录</string>
</resources>
